# propkatraj

./: .buildinfo  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  AUTHORS  INSTALL.md  LICENSE  MANIFEST.in  README.md  api.html  environment.yml  genindex.html  index.html  objects.inv  propkatraj.py  pyproject.toml  readthedocs.yaml  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml
.doctrees/: api.doctree  index.doctree
.doctrees/usage/: examples.doctree  installation.doctree
.github/actions/wait-for-pypi-version/: action.yaml
.github/workflows/: deploy.yaml  docs.yaml  gh-ci.yaml
_modules/: index.html
_modules/propkatraj/: propkatraj.html
_sources/: index.rst.txt
_sources/usage/: installation.rst.txt
devtools/: environment.yml
docs/: prokatraj-example.ipynb  propkatraj-example.ipynb  requirements.yaml
docs/html/: .buildinfo  api.html  genindex.html  index.html  search.html  searchindex.js
docs/html/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/html/_modules/: index.html
docs/html/_modules/propkatraj/: propkatraj.html
docs/html/_sources/: index.rst.txt
docs/html/_sources/usage/: examples.rst.txt
docs/html/usage/: examples.html  installation.html
docs/sphinx/: api.rst  conf.py  index.rst
docs/sphinx/usage/: examples.rst  installation.rst
propkatraj/: __init__.py  _version.py  propkatraj.py
propkatraj/tests/: datafiles.py  test_import.py  test_regression.py
propkatraj/tests/data/: atterr_frame1.xtc  indexerr_frame14.gro  indexerr_frame14.xtc  psf_ref_frame0.pka  psf_ref_frame90.pka
propkatraj/tests/datafiles/: .atterr_frame1.xtc_offsets.npz  .indexerr_frame14.xtc_offsets.npz
usage/: examples.html  installation.html
